assets/scss/components/_widgets.scss
.widget ul {
	list-style-type: none;
}

.widget_categories {
	a {
		display: block;
		padding: 0.5em 1em;
		@include font-size(0.75);
		color: $black;
		text-transform: uppercase;
		font-weight: bold;
	}
	li:nth-child(odd) a {
		background: $light-gray;
	}

}

// Login widget
// BP Login Widget
#bp-login-widget-form {
	position: relative;
	>label {
		position: relative;
		height: rem-calc(40);
		z-index: 1;
		color: $dark-gray;
		text-align: left;
		line-height: rem-calc(40);
		padding-left: 1rem;
	}
	>input[type="text"],
	>input[type="password"] {
		position: relative;
		height: rem-calc(40);
		transform: translateY(rem-calc(-40));
		margin-bottom: rem-calc(-30);
		&:focus {
			z-index: 2;
		}
	}
	.focused {
		z-index: 2;
	}
	input[type="submit"] {
		margin-bottom: 0;
	}
}
.widget_bp_core_login_widget {
	@include show-for(large);
	background: $light-gray;
	padding: 1em !important;
	text-align: center;
	.widget-title {
		&:before {
			content: "\f023";
			font-family: FontAwesome;
			margin-right: 0.5rem;
		}
	}
	.bp-login-widget-user-links>div {
		padding-left: 0 !important;
	}
	.bp-login-widget-user-link {
		margin-bottom: rem-calc(10);
	}
	.bp-login-widget-user-avatar {
		float: none !important;
		display: inline-block;
		img {
			width: 50px;
			height: 50px;
		}
	}
	.bp-login-widget-user-link {
		display: inline-block;
	}
	.logout, input[type="submit"] {
		@extend .button;
		@extend .expanded;
	}
}

.widget_thechamplogin {
	@include show-for(large);
	background: $light-gray;
	padding: 0 1em 1em;
	.the_champ_login_container {
		margin-top: 0;
		margin-bottom: 0;
		.the_champ_login_ul {
			margin: 0 !important;
		}
	}
	>h3 {
		@extend .screen-reader-text;
	}
}



// BP Members
.widget_bp_core_members_widget {
	margin-top: 1rem;
	#members-list {
		@extend .row;
		.vcard {
		@extend .columns;
		@extend .small-3;
		@extend .medium-4;
		text-align: center;
		clear: none !important;
		&:last-child {
			@extend .end;
		}
		}
	}
	.item-options {
		text-align: center;
		margin-bottom: 1rem;
	}
	.item-meta {
		display: none;
	}
	.item-title {
		@include font-size(0.8);
	}
	.item-avatar img {
		margin: 0;
		float: none !important;
		height: auto !important; 
		width: 100%!important;
		max-width: 80px;
	}
}

// BP Groups
.widget_bp_groups_widget {
	text-align: center;
	.item-options {
		margin-bottom: 1rem;
	}
	#groups-list {
		@extend .row;
		li {
		@extend .columns;
		@extend .small-3;
		@extend .medium-4;
		text-align: center;
		clear: none !important;
		&:last-child {
			@extend .end;
			}
		}
		.item-meta {
			display: none;
		}
		.item-title {
			@include font-size(0.8);
		}
		.item-avatar img {
			margin: 0;
			float: none !important;
			height: auto !important; 
			width: 100%!important;
			max-width: 80px;
	}
	}
}

.buddypress.widget {
 	.avatar-block {
 		@extend .row;
 		.item-avatar {
 		@extend .columns;
 		@extend .small-4;
 		text-align: center;
 		}
 		img {
 			float: none !important;
 			margin: 0 !important;
 			height: auto !important; 
 			width: 100%!important;
 			max-width: 80px;
 		}
 	}
 }

// Dogs widget
.recent-posts-extended .dogium-new-dogs {
	ul {
		list-style-type: none;
		margin-left: 0;
		@extend .row;
		li {
			@extend .columns;
			@extend .small-3;
			@extend .medium-4;
			text-align: center;
			clear: none !important;
			&:last-child {
			@extend .end;
			}
		}
		.rpwe-thumb {
			border-radius: 50%;
		}
		.rpwe-title {
			@include font-size(0.8);
			font-weight: normal;
			text-transform: none;
		}
	}
}

// Articles widget
.recent-posts-extended .dogium-articles {
	ul {
		list-style-type: none;
		margin-left: 0;
	}
	.more-link {
		font-weight: bold;
		&:before {
		content: " ";
		}
	}
	.rpwe-thumb {
		margin-bottom: 1rem;
		@extend .thumbnail;
	}
	.rpwe-title {
		@include font-size(1.25);
		text-transform: uppercase;
		font-weight: bold;
		color: $primary-color;
	}
	.rpwe-summary {
		margin-bottom: rem-calc(20);
	}
}

